# taxfood-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  build_detail_db.py  pyproject.toml
.github/workflows/: publish.yml
src/taxmatjip_mcp/: __init__.py  config.py  data.py  format.py  geo.py  links.py  models.py  sanitize.py  server.py  tools.py
tests/: conftest.py  test_data.py  test_detail_db.py  test_format.py  test_geo.py  test_models.py  test_sanitize.py  test_tools.py
